<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="navibar">show</string>
    <string name="title_eraser_set">Eraser Settings</string>
    <string name="title_pen_set">Brush Settings</string>
    <string name="erase_all">Erase ALL</string>
    <string name="quit_warning">Click again to exit without saving！</string>
    <string name="app_name">Mi-POP</string>
    <string name="full_screen">Navbar</string>
    <string name="mipop_title">Mi-POP</string>
    <string name="mipop_switch_title">Mi-POP</string>
    <string name="mipop_switch_summary">Once enabled, tap buttons on screen to perform action, convenient for one-hand operation</string>
    <string name="mipop_fullscreen_title">Hide the navigation bar</string>
    <string name="mipop_fullscreen_summary">Larger screen area available</string>
    <string name="widgetName">Mi-pop</string>
    <string name="widgetText">Mi-pop</string>
    <string name="fullscreenmode">Fullscreen mode</string>
    <string name="fullscreenmodeon">Hide Mi-POP and navigation bar</string>
    <string name="fullscreenmodeoff">Redisplay Mi-POP and navigation bar</string>
    <string name="Save">Save</string>
    <string name="Discard">Discard</string>
    <string name="Share">Share</string>
    <string name="SaveTO">Save to</string>
    <string name="SaveFail">Save Fail!</string>
    <string name="runningFaceDetection">Please wait…</string>
    <string name="power_off">Power off</string>
    <string name="reboot">Reboot</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="screenshots">Screenshots</string>
    <string name="volume">Volume</string>
    <string name="mute">Mute</string>
    <string name="no_support">Land not support!</string>
    <string name="fullScreem">Full Screen</string>
    <string name="partScreem">Part</string>
    <string name="Paint">Paint</string>
    <string name="mipop_first_key_title">Default Key</string>
    <string name="mipop_help_title">Help</string>
    <string name="mipop_update_title">Update version</string>
    <string name="mipop_update_summary">current version:</string>
    <string name="can_not_find_version_name">unknown version</string>
    <string name="cancel">Cancel</string>
    <string name="no_networks">No networks available,please check network connection</string>
    <string name="help">HELP</string>
    <string name="help1">1. Swipe to stretch Mi-POP. It will retract after two seconds of inactivity.</string>
    <string name="help2">2. Adjust its position vertically or by sliding it to the other side of the screen.</string>
    <string name="help3">3. Tap &amp; hold to pop up options, including screen lock, power off, volume, etc.</string>
    <string name="help4">4. Tap &amp; hold Back to start or close Mi-POP instantly</string>
    <string name="smart_remind_shortcut">Long press of Back button on navigation bar, enables or disables Mi-POP.</string>
    <string name="smart_remind_long_press">Long press of Mi-POP, opens a popup with many system actions.</string>
    <string name="smart_remind_screen_shot">Long press of Mi-POP and choosing Screenshot, you can do various actions, like paint, sharing, etc.</string>
    <string name="smart_remind_full_screen">When entering fullscreen mode, Mi-POP automatically closes, and reopens when you exit fullscreen mode.</string>
    <string name="smart_remind_known">OK</string>
</resources>
